Revision history for Dist-Zilla-Plugin-EnsureLatestPerl

{{$NEXT}}

0.004     2017-05-21 01:39:40Z
          - (hopefully) fix tests on MSWin32, by avoiding epoch times larger
            than 32 bits

0.003     2017-05-13 13:39:54Z
          - fix prereq on Module::CoreList to get the user into an initial
            working state (and ensures that tests pass)

0.002     2017-05-13 09:24:06Z
          - actually support DZIL_ANY_PERL override variable

0.001     2017-05-12 08:25:52Z
          - Initial release.