@@ -9,6 +9,10 @@ use Test::Fatal;
 use Path::Tiny;
 use Test::MockTime 'set_absolute_time';
 
+# preload, so as to not cause issues with subsequent alteration of $]
+use Devel::InnerPackage;
+use Module::Pluggable::Object;
+
 use lib 't/lib';
 use Versions;
 
